--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -1122,6 +1122,8 @@ De lengte van één stuk van de rode lijn is uit te rekenen met behulp van de st
 
 Als we nu alle lengtes van de lijnstukken optellen, benaderen we de booglengte van de sinus. Als we nu het aantal stukken steeds groter maken, benaderen we de booglengte van de sinus steeds beter.
 
+Schrijf een programma dat de lengte van \'e\'en periode van de sinus bepaalt. Het aantal stappen moet worden ingevoerd als een geheel getal $n$ ($n>1$).
+
 
 \section{Beslissingsopdrachten (\texttt{if}, \texttt{switch})}
 
