--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -2771,7 +2771,7 @@ Schrijf een programma dat een tekstbestand inleest. In het tekstbestand zitten s
 
 \begin{itemize}
 \item Als het commando \lstinline|\spaces|$\langle$\,\textsl{getal} $\rangle$ wordt gevonden, dan moet dit commando vervangen worden door een aantal spaties dat is opgegeven met het getal $\langle$\,\textsl{getal} $\rangle$. De tekens $\langle$ en $\rangle$ zijn geen onderdeel van het commando. Merk op dat tussen \lstinline|\spaces| en het getal geen spaties staan. Na het getal kan een spatie staan. Als er geen getal wordt gevonden, moet een foutmelding op het scherm volgen.
-\item Als het commando \lstinline|\lines|$\langle$\,\textsl{getal} $\rangle$ wordt gevonden, dan moet dit commando vervangen worden door een aantal lege regels dat is opgegeven met het getal $\langle$\,\textsl{getal} $\rangle$. De tekens $\langle$ en $\rangle$ zijn geen onderdeel van het commando. Merk op dat tussen \lstinline|\liness| en het getal geen spaties staan. Na het getal kan een spatie staan.  Als er geen getal wordt gevonden, moet een foutmelding op het scherm volgen.
+\item Als het commando \lstinline|\lines|$\langle$\,\textsl{getal} $\rangle$ wordt gevonden, dan moet dit commando vervangen worden door een aantal lege regels dat is opgegeven met het getal $\langle$\,\textsl{getal} $\rangle$. De tekens $\langle$ en $\rangle$ zijn geen onderdeel van het commando. Merk op dat tussen \lstinline|\lines| en het getal geen spaties staan. Na het getal kan een spatie staan.  Als er geen getal wordt gevonden, moet een foutmelding op het scherm volgen.
 \item Als het commando \lstinline|\nobreak| wordt gevonden, dan moet het end-of-line-karakter aan het einde van de huidige ingelezen regel verwijderd worden. Het end-of-line-karakter wordt dus niet afgedrukt. Merk op dat na \lstinline|\nobreak| altijd een spatie of een end-of-line-karakter moet volgen anders is het commando \lstinline|\nobreak| niet te detecteren.
 \end{itemize}
 
