removed difficulty from being rendered.

--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -14,7 +14,7 @@
 
 \documentclass[a4paper,10pt,fleqn,twoside]{article}
 
-\def\version{1.9999$\alpha$}
+\def\version{1.9999$\beta$}
 
 \usepackage{parskip}
 \usepackage[dutch]{babel}
@@ -572,10 +572,10 @@ splittopskip = \topskip,%
 
 \tableofcontents
 
-%%%\hspace*{0pt}\vfill
-%%%Dit document is gemaakt door F. Theinert, W. Muhammad, B. Kuiper, M. Schrauwen, H. Broeders en J. op den Brouw.
-%%%Opmerkingen en suggesties kunnen worden gemaild naar \href{mailto:J.E.J.opdenBrouw@hhs.nl}{J.E.J.opdenBrouw@hhs.nl}
-%%%
+\vfill
+Dit document is gemaakt door F. Theinert, W. Muhammad, B. Kuiper, M. Schrauwen, H. Broeders en J. op den Brouw.
+Opmerkingen en suggesties kunnen worden gemaild naar \href{mailto:J.E.J.opdenBrouw@hhs.nl}{J.E.J.opdenBrouw@hhs.nl}
+
 
 
 \section*{Aanbevolen werkwijze}
@@ -3598,6 +3598,7 @@ int main(int argc, char *argv[]) {
 \end{lstlisting}
 \end{figure}
 
+\iffalse
 \section{Moeilijkheidsgraad}
 In de onderstaande tabel is de moeilijkheidsgraad te vinden. A = eenvoudig, B = iets moeilijker, C = lastig, D = moeilijk, E = heel moeilijk.
  
@@ -3684,5 +3685,5 @@ In de onderstaande tabel is de moeilijkheidsgraad te vinden. A = eenvoudig, B = 
 6.11 A\\
 6.12 D
 \end{multicols}
-
+\fi
 \end{document}
