update year, version and dosbox text

--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -5,7 +5,7 @@
 %%
 %%   GESPRG_practicumdocument - Exercises for programming in C
 %%
-%%   (c) 2019  --  The Hague University of Applied Sciences (THUAS)
+%%   (c) 2020  --  The Hague University of Applied Sciences (THUAS)
 %%
 %%   Please mail your comments to: J.E.J.opdenBrouw@hhs.nl
 %%
@@ -14,7 +14,7 @@
 
 \documentclass[a4paper,10pt,fleqn,twoside]{article}
 
-\def\version{1.9999$\beta$}
+\def\version{1.9999$\gamma$}
 
 \usepackage{parskip}
 \usepackage[dutch]{babel}
@@ -3518,7 +3518,7 @@ We ronden het programma af door het leesbestand en schrijfbestand af te sluiten.
 \end{figure}
 
 \subsection{Openen van een DOS-box op Windows}
-Een DOS-box kan je openen via de Start-knop (in het voorbeeld onder Windows 7).  Klik op Start en vul in het kader de tekst \lstinline[language=,literate=]|cmd.exe| in. Druk op de enter-toets en een DOS-box wordt geopend. Zie figuur~\ref{fig:cmdexe}.
+Een DOS-box kan je openen via de Start-knop (in het voorbeeld onder Windows 10). Klik op Start en vul in het kader de tekst \lstinline[language=,literate=]|cmd.exe| in. Druk op de enter-toets en een DOS-box wordt geopend. Zie figuur~\ref{fig:cmdexe}.
 
 \begin{figure}[!ht]
 	\centering
